<?xml version="1.0"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup para my_robot con ros2_control</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>actuator_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>my_motor_hardware</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
